<resources>
    <string name="app_name">CourseWork</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_orders">Мои заказы</string>

    <string name="new_order">Новая запись</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide_subtitle</string>
    <string name="subtitle_format">%1$s orers</string>


    <string name="date_picker_title">Choose date of order </string>
    <string name="current_order">Текущая запись:</string>
    <string name="list_item_order_incidentCheck">Всё прошло успешно?</string>
    <string name="date_order">date_order</string>
    <string name="title_ListOrderActivity">Мои записи</string>
    <string name="regestration_text_view">Registration</string>
    <string name="login">Log in</string>
    <string name="forgot_account">Forgot your account?</string>
    <string name="dialog_makeorder_listview_title">Ваш заказ:</string>
    <string name="successful_save">Успешно сохранён!</string>
    <string name="havent_order">У вас нет текущих записей :(</string>

    <string name="past_orders"><u>Прошлые записи</u></string>

</resources>
