<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="login"
        android:ems="10"
        android:id="@+id/editText"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="password"
        android:textSize="30dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:textSize="27dp"
        android:layout_marginTop="20dp"
        android:background="@color/menubg"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regestration_text_view"
        android:id="@+id/regestration_button"
        android:textSize="27dp"
        android:layout_marginTop="20dp"
        android:background="@color/menubg"
        android:layout_below="@+id/login_button"
        android:layout_alignRight="@+id/login_button"
        android:layout_alignEnd="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_account"
        android:id="@+id/textView"
        android:layout_below="@+id/regestration_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:textSize="27dp"
        android:textColor="@color/menubg" />


</RelativeLayout>