<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/currentLinearLayout"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/current_orders"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="2"

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_order"
            android:textSize="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"

            android:visibility="invisible"
            android:id="@+id/current_order" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Стиральная машина №5"
            android:layout_below="@id/current_order"
            android:id="@+id/number_machine"
            android:layout_marginLeft="16dp"
            android:textSize="20dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/time_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18:00"
            android:layout_below="@id/number_machine"
            android:layout_marginLeft="16dp"
            android:visibility="invisible"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/date_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Вторник 24 ноября"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/time_order"
            android:visibility="invisible"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:text="@string/havent_order"


            android:textSize="30dp"
            android:padding="25dp"
            android:id="@+id/listorder_textView_not_have_order" />

    </RelativeLayout>




    <TextView
        android:id="@+id/textView3"
        android:layout_below="@id/current_orders"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_orders"
        android:layout_marginTop="10dp"

        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:singleLine="true"
        android:outlineProvider="background" />


    <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:layout_weight="1"
            android:layout_below="@id/textView3"
            android:contextClickable="false" />
    <ImageView
        android:id="@+id/add_order_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/listView"
        android:layout_alignRight="@id/listView"
        android:src="@drawable/add4"
        android:elevation="10dp"
        android:padding="15dp"
        />

    <ImageView
        android:layout_width="100px"
        android:layout_height="100px"
        android:src="@drawable/delete"
        android:visibility="invisible"
        android:layout_alignBottom="@id/current_orders"
        android:layout_alignRight="@id/current_orders"

        android:id="@+id/imageViewDelete"/>

    <ImageView
        android:layout_width="100px"
        android:layout_height="100px"
        android:visibility="invisible"
        android:src="@drawable/redact1"
        android:layout_toLeftOf="@id/imageViewDelete"
        android:layout_alignBottom="@id/imageViewDelete"
        android:layout_marginRight="5dp"
        android:id="@+id/imageViewRedact" />

</RelativeLayout>